--- a/NNS.ipynb
+++ b/NNS.ipynb
@@ -4,7 +4,13 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE+wx7oUjU2mh/2Y17tol3",
+      "collapsed_sections": [
+        "2mgjDyEZfxBt",
+        "F4TAIp1xfsbr",
+        "9138jXotf0Aq",
+        "hX73CpBpbYk1"
+      ],
+      "authorship_tag": "ABX9TyOEwIWUIwApLwVB1iRCHOPd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -895,6 +901,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eRoivfbPdP4a"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
